chore: Update README and refactored the directory structure